src/components/AnimatedScript/AnimatedScript.scss
@import '../../common.scss';
/* ------------------------------------------------ */
/* Typing Animaiton */
/* ------------------------------------------------ */
$break: 600px;
$breakLarge: 800px;
.storyBlock {
    text-align: left;
    max-width: $break;
    margin: 0 auto 20px;
    padding: 30px;
    background: $trueWhite;
    box-shadow: 4px 4px 4px 0 rgba(0,0,0,0.05);
    position: relative;
    font-size: 16px;
}
@media all and (min-width: $break){
    .storyBlock {
        margin: 20px auto 20px auto;
        font-size: 20px;
    }
}
.withMargin {
    margin-top: 30px;
}
/* # of steps = # of characters  */
@-webkit-keyframes typing {
    from { width: 0 }
    to { width: 100% }
}

@-moz-keyframes typing {
    from { width: 0 }
    to { width: 100% }
}

@-webkit-keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: black }
}

@-moz-keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: black }
}
.cssTyping {
    font-family: Consolas, monospace;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    position: relative;
}
.animation12 {
    -webkit-animation: typing 400ms steps(12, end);
    -moz-animation: typing 400ms steps(12, end);
}
.animation14 {
    -webkit-animation: typing 500ms steps(14, end);
    -moz-animation: typing 500ms steps(14, end);
}
.animation21 {
    -webkit-animation: typing 1200ms steps(21, end);
    -moz-animation: typing 1200ms steps(21, end);
}
.animation24 {
    -webkit-animation: typing 1450ms steps(24, end);
    -moz-animation: typing 1450ms steps(24, end);
}
.animation26 {
    -webkit-animation: typing 1600ms steps(26, end);
    -moz-animation: typing 1600ms steps(26, end);
}

.cssText {
    display: inline-block;
}
.blinkingCursor {
    vertical-align: top;
    border-right: 2px solid;
    animation: blink-caret 1s step-end infinite;
    -webkit-animation: blink-caret 1s step-end infinite;
    -moz-animation: blink-caret 1s step-end infinite;
}

.arrowSection {
  position: absolute;
  right: 10px;
  bottom: 10px;
  cursor: pointer;
}
.arrowText {
  display: none;
}
@media all and (min-width: $breakLarge){
  .arrowText {
      display: inline-block;
      font-size: 15px;
      margin: 0 8px;
      vertical-align: top;
      padding-top: 4px;
      color: $awesomeColor;
  }
}
.arrowRight {
  width: 0;
  height: 0;
  
  display: inline-block;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 16px solid $awesomeColor;
  
}
.battleStrategy {
  color: $awesomeColor;
}

